add new two API
